--- a/common/gtk-3.0/sass/_colors.scss
+++ b/common/gtk-3.0/sass/_colors.scss
@@ -24,7 +24,7 @@ $warning_fg_color: white;
 $error_fg_color: white;
 $success_color: #73d216;
 $destructive_color: #F04A50;
-$suggested_color: #005577;
+$suggested_color: #007722;
 $destructive_fg_color: white;
 $suggested_fg_color: white;
 
@@ -70,7 +70,7 @@ $entry_border: if($variant != 'dark', #cfd6e6, darken($borders_color, 0%));
 $header_entry_bg: if($variant == 'dark' or $variant == 'darker', transparentize(lighten($header_bg, 22%), 0.6), transparentize($base_color, 0.1));
 $header_entry_border: if($variant == 'dark' or $variant == 'darker', transparentize(darken($header_bg, 12%), 0.6), transparentize($header_fg, 0.7));
 
-$button_bg: if($variant != 'dark', lighten($bg_color, 2%), $suggested_color);
+$button_bg: if($variant != 'dark', lighten($bg_color, 2%), $selected_bg_color);
 $button_border: $entry_border;
 
 $header_button_bg: if($variant == 'dark' or $variant == 'darker', transparentize(lighten($header_bg, 22%), 0.6), transparentize($button_bg, 0.1));
